--- a/index.html
+++ b/index.html
@@ -3,39 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flashfood-clone</title>
 </head>
 <body>
     <div class="ab">
         <div class="stickybar">
             <img id="logo" src="pics\logo.png" alt="FlashFood">
             <div class="bar">
-                <a href=""><b>HOW IT WORKS</b></a>
-                <a href="" style="padding-right: 120px;"><b>LOCATIONS</b></a>
+                <a href="https://flashfood.com/#How-it-works"><b>HOW IT WORKS</b></a>
+                <a href="/en/locations/home" style="padding-right: 120px;"><b>LOCATIONS</b></a>
                 <div class="dropdown">
                     <button class="dropbtn"><b>ABOUT ▼</b> 
                     </button>
                     <div class="dropdown-content">
-                      <a href="#"><b>OUR STORY</b></a>
-                      <a href="#"><b>FOOD WASTE</b></a>
-                      <a href="#"><b>THE TEAM</b></a>
-                      <a href="#"><b>PRESS ROOM</b></a>
-                      <a href="#"><b>IMPACT REPORTER</b></a>
+                      <a href="/en/story"><b>OUR STORY</b></a>
+                      <a href="/en/food-waste"><b>FOOD WASTE</b></a>
+                      <a href="/en/the-team"><b>THE TEAM</b></a>
+                      <a href="/en/press"><b>PRESS ROOM</b></a>
+                      <a href="/en/2022-impact-report"><b>IMPACT REPORTER</b></a>
                     </div>
                   </div> 
-                <a href=""><b>SUPPORT</b></a>
-                <a href=""><b>PARTNER</b></a>
-                <button class="btn" type="button" onclick="" ><b>DOWNLOAD</b></button>
+                <a href="https://help.flashfood.com/hc/en-us"><b>SUPPORT</b></a>
+                <a href="/en/partners"><b>PARTNER</b></a>
+                <button class="btn" type="button" onclick="/en/download" ><b>DOWNLOAD</b></button>
             </div>
         </div>
         <div class="a1">
             <div class="big-text">
                 <h2 >Save money and fight against food waste</h2>
                 <p class="normal-text">Get massive savings on fresh food items like meat and produce that are nearing their best before date at grocery stores across Canada and the U.S.</p>
-                <a href="#">
+                <a href="https://www.flashfood.com/?af_js_web=true&af_ss_ver=2_1_0&pid=website&c=no_campaign">
                     <img class="app" style="padding-top: 70px;" src="https://assets-global.website-files.com/5e4482baa13a1926b23e2187/5e4dd1e309d48fb5d5f2be24_Apple%201.svg" height="38" id="appledownload" alt="Download on the App Store badge" onclick="">
                 </a>
-                <a href="#">
+                <a href="https://www.flashfood.com/?af_js_web=true&af_ss_ver=2_1_0&pid=website&c=no_campaign">
                     <img class="app" style="padding-top: 70px;" src="https://assets-global.website-files.com/5e4482baa13a1926b23e2187/5e4dd1dd09d48f7b3cf2bdf4_Google%201.svg" height="38" alt="Get it on Google Play badge" onclick="">
                 </a>
             </div>
@@ -70,17 +70,21 @@
                     <img src="https://assets-global.website-files.com/5e596dafce8eb6216f68e410/6160917733eb280455acb2cd_nofrills.png" alt="" class="image-76">
                 </div>
             </div>
-            <div class="b">
+            <div class="b" style="right:0; left:300px;">
                 <p>Are you a grocery chain that wants to work with Flashfood?</p>
-                <button  type="button" class="btn one"><b>LEARN MORE</b></button>
+                <button  type="button" class="btn one"> onclick="/en/partners"<b>LEARN MORE</b></button>
             </div>
-            <p id="title"><b>How it works</b></p>
+            <section class="title">
+                <div class="title-box">
+                How it works
+            </div>
+            </section>
             <div class="box b1">
                 <div class="sodhi s1">
                     <h2 class="heading" >First, use the free app to quickly and easily find discounted food from wherever you are.</h2>
                     <ul class="list">
                         <li id="d">Browse deals of up to 50% off at a grocery store location near you.</li>
-                        <a href="#" id="loc">See Locations ></a>
+                        <a href="/en/locations/home" id="loc">See Locations ></a>
                         <li id="d">Choose your discounted food items.</li>
                         <li id="d">Pay right in the app using any major credit card, VISA debit card, or SNAP EBT card.</li>
                     </ul>
@@ -97,12 +101,12 @@
             <div class="box b3">
                 <div class="sodhi s3">
                     <h2 class="heading">Finally, enjoy good food, a great deal, and the good deed - you just saved some food from the landfill!</h2>
-                    <a href="#" id="loc">Learn more about Food Waste ></a>
+                    <a href="/en/food-waste" id="loc">Learn more about Food Waste ></a>
                 </div>
                 <img id="food" src="https://assets-global.website-files.com/5e4482baa13a1926b23e2187/5e50882a8c34f83e2341e710_image.png" alt="" class="image-5">
             </div>
-            <div class="t">
-                <p id="t"><b>We’ve helped thousands of people save money on their groceries</b></p>
+            <div class="t" style="right:0; left:0;">
+                <p id="t" style="padding-left:30%;"><b>We’ve helped thousands of people save money on their groceries</b></p>
             </div>
             <div class="last-text">
                 <div class="last-text1">
@@ -145,10 +149,10 @@
                     <div>ARE YOU READY?</div>
                     <div  class="ending-top1-text">
                         <h1>Download the free app and save money on groceries now</h1>
-                        <a href="#">
+                        <a href="https://www.flashfood.com/?af_js_web=true&af_ss_ver=2_1_0&pid=website&c=no_campaign">
                             <img class="app1" src="https://assets-global.website-files.com/5e4482baa13a1926b23e2187/5e4dd1e309d48fb5d5f2be24_Apple%201.svg" height="38" alt="Download on the App Store badge" onclick="">
                         </a>
-                        <a href="#">
+                        <a href="https://www.flashfood.com/?af_js_web=true&af_ss_ver=2_1_0&pid=website&c=no_campaign">
                             <img class="app1" src="https://assets-global.website-files.com/5e4482baa13a1926b23e2187/5e4dd1dd09d48f7b3cf2bdf4_Google%201.svg" height="38" alt="Get it on Google Play badge" onclick="">
                         </a>
                     </div>
@@ -161,7 +165,7 @@
         </section>
         <footer class="footer">
             <div>
-                <div class="footer-follow"><a>FOLLOW @FLASHFOOD</a></div>
+                <div class="footer-follow" style="left:0; right:0; padding-left: 70%;"><a>FOLLOW @FLASHFOOD</a></div>
                 <div class="images-footer">
                     <img class="img1-footer" src="pics/footer-img1.jpeg">
                     <img class="img2-footer" src="pics/footer-img2.png">
@@ -175,9 +179,9 @@
                     <img class="footer-logos" src="https://assets-global.website-files.com/5e4482baa13a1926b23e2187/6079a3e353127e9a9a60b0e2_flashfood-app-icon.svg">
                     <div class="footer-text">Find Flashfood near you →
                         <div class="footer-icons">
-                            <img class="insta-icon" src="pics/insta-icon.svg">
-                            <img class="facebook-icon" src="pics/facebook-icon.svg">
-                            <img class="twitter-icon" src="pics/twitter-icon.svg">
+                            <img class="insta-icon" src="pics/insta-icon.svg" onclick="www.instagram.com/flashfood">
+                            <img class="facebook-icon" src="pics/facebook-icon.svg" onclick="https://www.facebook.com/Flashfood/">
+                            <img class="twitter-icon" src="pics/twitter-icon.svg" onclick="twitter.com/flashfoodinc">
                         </div>
                     </div>
                 </div>
